# nrf52840_ble_test

./: CMakeLists.txt  main.c
cmake/common/: build_options.cmake  compiler_options.cmake  definitions.cmake  linker_options.cmake  warnings.cmake
cmake/cpu/: gcc_arm_cortex_m4_hf.cmake
cmake/proj/: conf.cmake  packages.cmake
cmake/toolchain/: gcc_arm_none_eabi.cmake  gcc_arm_none_eabi_conf.cmake
libs/nrf_sdk/: CMakeLists.txt
libs/nrf_sdk/components/ble/ble_advertising/: CMakeLists.txt
libs/nrf_sdk/components/ble/ble_services/ble_bas/: CMakeLists.txt
libs/nrf_sdk/components/ble/ble_services/ble_dis/: CMakeLists.txt
libs/nrf_sdk/components/ble/ble_services/ble_hrs/: CMakeLists.txt
libs/nrf_sdk/components/ble/common/: CMakeLists.txt
libs/nrf_sdk/components/ble/nrf_ble_gatt/: CMakeLists.txt
libs/nrf_sdk/components/ble/nrf_ble_qwr/: CMakeLists.txt
libs/nrf_sdk/components/ble/peer_manager/: CMakeLists.txt
libs/nrf_sdk/components/boards/: CMakeLists.txt  custom_board.h
libs/nrf_sdk/components/libraries/atomic/: CMakeLists.txt
libs/nrf_sdk/components/libraries/atomic_fifo/: CMakeLists.txt
libs/nrf_sdk/components/libraries/atomic_flags/: CMakeLists.txt
libs/nrf_sdk/components/libraries/balloc/: CMakeLists.txt
libs/nrf_sdk/components/libraries/bsp/: CMakeLists.txt
libs/nrf_sdk/components/libraries/button/: CMakeLists.txt
libs/nrf_sdk/components/libraries/delay/: CMakeLists.txt
libs/nrf_sdk/components/libraries/experimental_section_vars/: CMakeLists.txt
libs/nrf_sdk/components/libraries/fds/: CMakeLists.txt
libs/nrf_sdk/components/libraries/fstorage/: CMakeLists.txt
libs/nrf_sdk/components/libraries/log/: CMakeLists.txt
libs/nrf_sdk/components/libraries/memobj/: CMakeLists.txt
libs/nrf_sdk/components/libraries/mutex/: CMakeLists.txt
libs/nrf_sdk/components/libraries/ringbuf/: CMakeLists.txt
libs/nrf_sdk/components/libraries/sensorsim/: CMakeLists.txt
libs/nrf_sdk/components/libraries/strerror/: CMakeLists.txt
libs/nrf_sdk/components/libraries/timer/: CMakeLists.txt
libs/nrf_sdk/components/libraries/util/: CMakeLists.txt  sdk_config.h
libs/nrf_sdk/components/softdevice/common/: CMakeLists.txt
libs/nrf_sdk/components/softdevice/s113/: CMakeLists.txt
libs/nrf_sdk/components/softdevice/s140/: CMakeLists.txt
libs/nrf_sdk/components/toolchain/cmsis/: CMakeLists.txt
libs/nrf_sdk/integration/nrfx/: CMakeLists.txt
libs/nrf_sdk/integration/nrfx/legacy/: CMakeLists.txt
libs/nrf_sdk/modules/nrfx/: CMakeLists.txt
libs/nrf_sdk/modules/nrfx/drivers/: CMakeLists.txt
libs/nrf_sdk/modules/nrfx/hal/: CMakeLists.txt
libs/nrf_sdk/modules/nrfx/mdk/: CMakeLists.txt
modules/application/: CMakeLists.txt  main.c
tools/jlink/: CMakeLists.txt  CommandFile.jlink.in
tools/ozone/: CMakeLists.txt  ozone.jdebug.in
