################################################################################
project(libs_nrf_sdk)
################################################################################
add_subdirectory(${PROJECT_SOURCE_DIR}/modules/nrfx/mdk)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/toolchain/cmsis)
################################################################################
