################################################################################
project(libs_nrf_sdk)
################################################################################
add_subdirectory(${PROJECT_SOURCE_DIR}/components/libraries/atomic)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/libraries/balloc)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/libraries/experimental_section_vars)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/libraries/log)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/libraries/memobj)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/libraries/ringbuf)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/libraries/strerror)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/libraries/util)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/softdevice/common)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/softdevice/s113)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/toolchain/cmsis)
add_subdirectory(${PROJECT_SOURCE_DIR}/external/fprintf)
add_subdirectory(${PROJECT_SOURCE_DIR}/external/freertos)
add_subdirectory(${PROJECT_SOURCE_DIR}/integration/nrfx)
add_subdirectory(${PROJECT_SOURCE_DIR}/integration/nrfx/legacy)
add_subdirectory(${PROJECT_SOURCE_DIR}/modules/nrfx)
add_subdirectory(${PROJECT_SOURCE_DIR}/modules/nrfx/drivers)
add_subdirectory(${PROJECT_SOURCE_DIR}/modules/nrfx/hal)
add_subdirectory(${PROJECT_SOURCE_DIR}/modules/nrfx/mdk)
################################################################################
