################################################################################
project(libs_nrf_sdk)
################################################################################
add_subdirectory(${PROJECT_SOURCE_DIR}/components/ble/ble_services/ble_bas)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/ble/ble_services/ble_dis)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/ble/ble_services/ble_hrs)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/ble/ble_advertising)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/ble/common)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/ble/nrf_ble_gatt)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/ble/nrf_ble_qwr)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/ble/peer_manager)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/boards)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/libraries/atomic)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/libraries/atomic_fifo)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/libraries/atomic_flags)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/libraries/balloc)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/libraries/bsp)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/libraries/button)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/libraries/delay)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/libraries/experimental_section_vars)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/libraries/fds)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/libraries/fstorage)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/libraries/log)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/libraries/memobj)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/libraries/mutex)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/libraries/ringbuf)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/libraries/sensorsim)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/libraries/strerror)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/libraries/timer)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/libraries/util)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/softdevice/common)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/softdevice/s140)
add_subdirectory(${PROJECT_SOURCE_DIR}/components/toolchain/cmsis)
add_subdirectory(${PROJECT_SOURCE_DIR}/external/fprintf)
add_subdirectory(${PROJECT_SOURCE_DIR}/external/freertos)
add_subdirectory(${PROJECT_SOURCE_DIR}/external/segger_rtt)
add_subdirectory(${PROJECT_SOURCE_DIR}/integration/nrfx)
add_subdirectory(${PROJECT_SOURCE_DIR}/integration/nrfx/legacy)
add_subdirectory(${PROJECT_SOURCE_DIR}/modules/nrfx)
add_subdirectory(${PROJECT_SOURCE_DIR}/modules/nrfx/drivers)
add_subdirectory(${PROJECT_SOURCE_DIR}/modules/nrfx/hal)
add_subdirectory(${PROJECT_SOURCE_DIR}/modules/nrfx/mdk)
################################################################################
